# simple_cloudflare_api

./: Cargo.toml
src/: lib.rs
