[package]
name = "simple_cloudflare_api"
version = "0.1.0"
edition = "2021"
description = "A simple uncomplicated Cloudflare API"
license = "MIT"
repository = "https://github.com/kentaasvang/simple_cloudflare_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0"
serde = { version ="1.0", features = ["derive"] }

[dev-dependecies]
